Added ProjectView and IntegrateView pages

--- a/www/usemodels/screens.html
+++ b/www/usemodels/screens.html
@@ -31,7 +31,13 @@
   <li>Basic Editing:
     <ul>
       <li><a href="IssueView.html">IssueView</a>
+	  <li><a href="ProjectView.html">ProjectView</a>
     </ul>
+
+<li>Integration:
+    <ul>
+      <li><a href="IntegrateView.html">IntegrateView</a>
+ </ul>
  
   <li>Errors:
     <ul>
