Additions to Basid Editing and added Integration

--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -33,11 +33,18 @@
       <li><a href="basicediting.html#UC-11">Edit milestone details</a>
       <li><a href="basicediting.html#UC-12">Defer issue until further notice</a>
       <li><a href="basicediting.html#UC-13">Reject invalid issue</a>
+      <li><a href="basicediting.html#UC-14">Copying an Issue</a>
+      <li><a href="basicediting.html#UC-15">Moving an Issue</a>
     </ul>
 
   <li>Basic Reporting:
     <ul>
       <li> generate a report
+    </ul> 
+
+ <li>Integration:
+    <ul>
+      <li><a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\integration.html#UC-16">Establish a Link Between an Issue ID and a Commit ID</a>
     </ul> 
 </ul>
 
