Let's try to go with hyperlinks that actually work.  ;)

--- a/www/usemodels/basicediting.html
+++ b/www/usemodels/basicediting.html
@@ -341,9 +341,9 @@ vAlign=top><B>Extends:</B></TD>
               <LI>CompOwner: visit MyIssues or other list of issues assigned to 
               his/her component 
               <LI>CompOwner: select an issue from list 
-              <LI>Scarab: display <a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\IssueView.html">IssueView</a>  
+              <LI>Scarab: display <a href="IssueView.html">IssueView</a>  
               <LI>CompOwner: selects "Copy" 
-              <LI>Scarab: display <a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\ProjectView.html">ProjectView</a>  
+              <LI>Scarab: display <a href="ProjectView.html">ProjectView</a>  
               <LI>If CompOwner: selects to copy within the same project: 
               <UL type=a>
                 <LI>Scarab: copies issue and waits for user to make edit(s) 
@@ -433,7 +433,7 @@ vAlign=top><B>Extends:</B></TD>
               <LI>CompOwner: visit MyIssues or other list of issues assigned to 
                 his/her component 
               <LI>CompOwner: select an issue from list and clicks &quot;Move&quot;
-              <LI>Scarab: display <a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\ProjectView.html">ProjectView</a>
+              <LI>Scarab: display <a href="ProjectView.html">ProjectView</a>
               <LI>CompOwner: selects the project that they want to move the issue 
                 to and clicks &quot;Submit&quot;
               <LI>Scarab: asks CompOwner to confirm
