--- a/www/usemodels/integration.html
+++ b/www/usemodels/integration.html
@@ -88,7 +88,7 @@
           same project 
         <li>If matches found: 
           <ol type="a">
-            <li> Scarab: display <a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\IntegrateView.html">IntegrateView</a>
+            <li> Scarab: display <a href="IntegrateView.html">IntegrateView</a>
             <li> User: review list of Commit matches
             <li> If Commit matches user's issue: 
               <ul type='a'>
