--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -44,7 +44,7 @@
 
  <li>Integration:
     <ul>
-      <li><a href="C:\Program Files\GNU\WinCvs 1.1\Scarab\scarab\www\usemodels\integration.html#UC-16">Establish a Link Between an Issue ID and a Commit ID</a>
+      <li><a href="integration.html#UC-16">Establish a Link Between an Issue ID and a Commit ID</a>
     </ul> 
 </ul>
 
