--- a/src/java/org/apache/log4j/xml/examples/package.html
+++ b/src/java/org/apache/log4j/xml/examples/package.html
@@ -11,9 +11,12 @@ configuration file.
 
 <p>See source code of <a
 href="doc-files/XMLSample.java">XMLSample.java</a> showing how to
-configure with an XML file.  Sample XML files <a
-href="doc-files/sample1.xml">sample1.xml</a> and <a
-href="doc-files/sample2.xml">sample2.xml</a> are provided.
+configure with an XML file.  Sample XML files 
+<a href="doc-files/sample1.xml">sample1.xml</a>, 
+<a href="doc-files/sample2.xml">sample2.xml</a>, 
+<a href="doc-files/sample3.xml">sample3.xml</a>, 
+<a href="doc-files/sample4.xml">sample4.xml</a>, 
+<a href="doc-files/sample5.xml">sample5.xml</a> are provided.
 
 <hr>
 <address></address>
