Added  a note to link to Reports Page

--- a/www/usemodels/ProjectIssues.html
+++ b/www/usemodels/ProjectIssues.html
@@ -54,7 +54,8 @@
               </ul>
            <li>editing widgets?
          </ol>
-        <li>Links to admin functions
+        <li>Link to Reports Page
+         <li>Links to admin functions
         <li>HelpStickyNote
          <ol>
            <li>Link to scarab intro
