--- a/www/usemodels/screens.html
+++ b/www/usemodels/screens.html
@@ -34,6 +34,10 @@
 	  <li><a href="ProjectView.html">ProjectView</a>
     </ul>
 
+ <li>Basic Reporting:
+    <ul>
+      <li><a href="ReportsPage.html">ReportsPage</a>
+	   </ul>
 <li>Integration:
     <ul>
       <li><a href="IntegrateView.html">IntegrateView</a>
