Added Attaching a File and Reporting use cases

--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -35,11 +35,15 @@
       <li><a href="basicediting.html#UC-13">Reject invalid issue</a>
       <li><a href="basicediting.html#UC-14">Copying an Issue</a>
       <li><a href="basicediting.html#UC-15">Moving an Issue</a>
+      <li><a href="basicediting.html#UC-17">Attaching a File to an Issue</a>
     </ul>
 
   <li>Basic Reporting:
     <ul>
-      <li> generate a report
+      <li><a href="basicreporting.html#UC-18">Printing a Predefined Report</a>
+      <li><a href="basicreporting.html#UC-19">Printing a MyReports Report</a>
+      <li><a href="basicreporting.html#UC-20">Automating a Report</a>
+      <li><a href="basicreporting.html#UC-21">Change a MyReport to a Predefined Report</a>
     </ul> 
 
  <li>Integration:
